# penumbra

./: .gitignore  README.md  docker_run.sh
core/: Cargo.toml
core/src/: device.rs  lib.rs
core/src/connection/: mod.rs
core/src/connection/backend/: libusb_backend.rs  libusb_backend_exp.rs  mod.rs  usb_backend.rs
core/src/core/: devinfo.rs  mod.rs  seccfg.rs
core/src/da/: dafile.rs  protocol.rs
core/src/da/xflash/: cmds.rs  da_protocol.rs  flash.rs  mod.rs  patch.rs  storage.rs  xflash.rs  xflash_lib.rs
core/src/da/xml/: cmds.rs  da_protocol.rs  mod.rs  storage.rs  xml_lib.rs
core/src/exploit/: heapbait.rs
docs/: flake.nix
scripts/: pack_v6_payload.py
scripts/drivers/: README.md  installer.nsi
tui/: Cargo.toml
tui/src/: app.rs  error.rs  logger.rs  macros.rs  main.rs
tui/src/cli/: common.rs  macros.rs  mod.rs  state.rs
tui/src/cli/commands/: download.rs  mod.rs  peek.rs  pgpt.rs  read.rs  readall.rs  reboot.rs  seccfg.rs  shutdown.rs  upload.rs  write.rs
tui/src/cli/helpers/: mod.rs  progress_bar.rs
tui/src/components/: dialog.rs  file_explorer.rs  mod.rs  selectable_list.rs
tui/src/pages/: device.rs  mod.rs  options.rs  welcome.rs
