[package]
name = "antumbra"
version = "1.0.0"
edition.workspace = true
authors = ["Shomy"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A TUI and CLI for interacting with MediaTek based devices."

[dependencies]
ratatui = { version = "0.29.0", optional = true }
penumbra = {path = "../core" }
env_logger = "0.11.8"
crossterm = { version = "0.29.0", optional = true }
ratatui-explorer = { version = "0.2.1", optional = true }
async-trait = "0.1.89"
tokio = {version="1.47.1", features = ["macros", "rt-multi-thread"]}
tokio-serial = "5.4.5"
futures = "0.3.31"
log = "0.4.28"
hex = "0.4.3"
strum_macros = "0.27.2"
strum = "0.27.2"
derive_builder = "0.20.2"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
indicatif = { version = "0.18.2", features = ["tokio"] }
anyhow = "1.0.100"
colored = "3.0.0"
human_bytes = "0.4.3"
rand = "0.9.2"
unicode-width = "0.2.0"
clap-num = "1.2.0"
dirs = "6.0.0"
config = "0.15.19"
toml = "0.9.10"

[[bin]]
name = "antumbra"
path = "src/main.rs"

[features]
default = []
tui = [
    "ratatui",
    "crossterm",
    "ratatui-explorer",
]

[build-dependencies]
winresource = "0.1.30"
